# kleiner-perkins-ai-hackathon

./: README.md
backend/: app.py  client.py  embeddings.json  model.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json  webpack.config.js
frontend/src/: game.ts
frontend/src/assets/: pack.json
frontend/src/scenes/: game-scene.ts
frontend/src/types/: general.ts
frontend/src/utils/: numbers.ts  translate.ts
