[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Xipu Li <lixipu98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
gunicorn = "^21.2.0"
openai = "^1.16.2"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
tiktoken = "^0.6.0"
sentence-transformers = "^2.6.1"
torch = "^2.2.2"
transformers = "^4.39.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
